# adar

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
adar/: Cargo.toml  README.md
adar/examples/: enum_trait_deref.rs  flags.rs  reflect_enum.rs  statemachine_advanced.rs  statemachine_blocking.rs  statemachine_fork.rs  statemachine_nonblocking.rs  statemachine_trafficlight.rs
adar/src/: lib.rs  state_machine.rs
adar/src/enums/: enum_trait_deref.rs  flags.rs  mod.rs  reflect.rs
adar/src/tuples/: as_trait_ref.rs  concat.rs  mod.rs  reflect.rs  tuple_trait_iter.rs
adar_macros/: Cargo.toml  README.md
adar_macros/src/: enum_trait_deref.rs  flags.rs  lib.rs  reflect.rs  state_machine.rs
adar_registry/: Cargo.toml  README.md
adar_registry/examples/: event.rs  registry_extension.rs  registry_map.rs  registry_mutation.rs  traced_registry.rs
adar_registry/src/: entry.rs  event.rs  lib.rs  registry.rs  registry_map.rs  traced_registry.rs
