[package]
name = "adar"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Advanced Architecture (ADAR) is a collection of architectural tools that help you write more readable and performant code."
keywords = ["architecture", "design", "flags", "statemachine"]
repository = "https://github.com/nandee95/adar/tree/main/adar"
documentation = "https://docs.rs/adar"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
num-traits = "0.2.19"
adar-macros = { version = "0.1.0" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
once_cell = "1.21.3"
serde_json = { version = "1.0" }
